--- a/assets/stylesheets/scss/base/inputs.scss
+++ b/assets/stylesheets/scss/base/inputs.scss
@@ -1,5 +1,19 @@
 //main: ../master.scss
 
+input[type="text"]{
+	width: 100%;
+	border: 1px solid $color-border;
+	border-radius: 3px;
+	line-height: 1.25;
+	padding: .5rem .725rem;
+	&:hover{
+		border-color: $color-shaft;
+	}
+	&:focus{
+		border-color: $color-primary;
+	}
+}
+
 .inputs{
 	position: relative;
 	margin-bottom: 1rem;
@@ -11,7 +25,6 @@
 		margin-right: .5rem;
 		margin-left: .5rem;
 		margin-bottom: 0;
-
 	}
 }
 
@@ -67,12 +80,6 @@
 		border-radius: 3px;
 		line-height: 1.25;
 		padding: .5rem .725rem;
-		&:hover{
-			border-color: $color-shaft;
-		}
-		&:focus{
-			border-color: $color-primary;
-		}
 	}
 	textarea{
 		min-height: 120px;
