--- a/assets/stylesheets/scss/base/inputs.scss
+++ b/assets/stylesheets/scss/base/inputs.scss
@@ -1,19 +1,5 @@
 //main: ../master.scss
 
-input[type="text"]{
-	width: 100%;
-	border: 1px solid $color-border;
-	border-radius: 3px;
-	line-height: 1.25;
-	padding: .5rem .725rem;
-	&:hover{
-		border-color: $color-shaft;
-	}
-	&:focus{
-		border-color: $color-primary;
-	}
-}
-
 .inputs{
 	position: relative;
 	margin-bottom: 1rem;
@@ -73,13 +59,19 @@ input[type="text"]{
 		font-size: .875rem;
 		font-weight: 600;
 	}
-	input,
+	input[type="text"],
 	textarea{
 		width: 100%;
 		border: 1px solid $color-border;
 		border-radius: 3px;
 		line-height: 1.25;
 		padding: .5rem .725rem;
+		&:hover{
+			border-color: $color-shaft;
+		}
+		&:focus{
+			border-color: $color-primary;
+		}
 	}
 	textarea{
 		min-height: 120px;
