update(stylesheets): update base,inputs,classes,variables

--- a/assets/stylesheets/scss/base/inputs.scss
+++ b/assets/stylesheets/scss/base/inputs.scss
@@ -152,3 +152,38 @@
 		}
 	}
 }
+
+
+.select2-container{
+	min-width: 180px;
+	.select2-selection--single{
+		.select2-selection__rendered{
+			line-height: 24px;
+		}
+	}
+	.select2-selection{
+		border: 1px solid $color-border;
+	}
+	&:hover{
+		.select2-selection{
+			border-color: $color-shaft;
+		}
+	}
+	&.select2-container--open{
+		.select2-selection{
+			border-color: $color-primary;
+			border-bottom-color: $color-border;
+		}
+	}
+	.select2-dropdown{
+		border-color: $color-primary;
+		.select2-results__option{
+			&[aria-selected="true"]{
+				background-color: $color-gallery;
+			}
+			&.select2-results__option--highlighted{
+				background-color: $color-primary;
+			}
+		}
+	}
+}
