--- a/assets/stylesheets/scss/base/base.scss
+++ b/assets/stylesheets/scss/base/base.scss
@@ -2,6 +2,17 @@
 
 *{
 	box-sizing: border-box;
+	outline: 0;
+}
+
+::-moz-selection {
+  color: $color-white;
+  background: $color-primary;
+}
+
+::selection {
+  color: $color-white;
+  background: $color-primary;
 }
 
 body{
@@ -105,6 +116,7 @@ body{
 		.container-page-head{
 			position: sticky;
 			top: 0;
+			z-index: 99;
 			display: flex;
 			align-items: center;
 			width: 100%;
