--- a/assets/stylesheets/scss/utilities/variables.scss
+++ b/assets/stylesheets/scss/utilities/variables.scss
@@ -18,7 +18,6 @@ $color-secondary: #2c365d;
 $color-secondary-hover: #2c365d;
 $color-secondary-active: #2c365d;
 
-
 $color-link: $color-primary;
 $color-link-hover: $color-primary-hover;
 
@@ -27,6 +26,10 @@ $color-border: $color-alto;
 
 $color-success: #00D169;
 $color-error: #FD413F;
+
+$color-logged: $color-success;
+$color-sleeped: #fdcb6e;
+$color-nologged: $color-error;
 
 // FONT
 $font-open: 'Open Sans', sans-serif;
