--- a/assets/stylesheets/scss/master.scss
+++ b/assets/stylesheets/scss/master.scss
@@ -15,3 +15,4 @@
 @import "./modules/base.scss";
 @import "./modules/agenda.scss";
 @import "./modules/list.scss";
+@import "./modules/calendar.scss";
