--- a/assets/stylesheets/scss/modules/base.scss
+++ b/assets/stylesheets/scss/modules/base.scss
@@ -1,11 +1,55 @@
 //main: ../master.scss
 
+.modules-col{
+	display: flex;
+	flex-direction: column;
+	flex: 1 1 auto;
+}
+
 .modules-row{
 	width: calc(100% + 1.5rem);
 	display: flex;
+
+	flex: 1 1 auto;
+	flex-direction: row;
+	flex-wrap: nowrap;
 	align-items: flex-start;
+
 	margin-left: -.725rem;
 	margin-right: -.725rem;
+
+	.modules-col{
+		.module-container{
+			&:not(:last-child){
+				margin-bottom: 1.5rem;
+			}
+		}
+	}
+	&.m1{
+		.module-container{
+			flex-basis: calc(100% - 1.5rem);
+			max-width: calc(100% - 1.5rem);
+		}
+	}
+	&.m2{
+		.module-container{
+			flex-basis: calc((100% / 2) - 1.5rem);
+			max-width: calc((100% / 2) - 1.5rem);
+		}
+	}
+	&.m3{
+		.module-container{
+			flex-basis: calc((100% / 3) - 1.5rem);
+			max-width: calc((100% / 3) - 1.5rem);
+		}
+	}
+	&.m4{
+		.module-container{
+			flex-basis: calc((100% / 4) - 1.5rem);
+			max-width: calc((100% / 4) - 1.5rem);
+		}
+	}
+
 	&:not(:last-child){
 		margin-bottom: 1.5rem;
 	}
@@ -17,7 +61,7 @@
 }
 
 .module-container{
-	width: 100%;
+	flex: 1 0 auto;
 	display: inline-block;
 	background-color: $color-white;
 	border: 1px solid $color-alto;
