--- a/assets/stylesheets/scss/base/base.scss
+++ b/assets/stylesheets/scss/base/base.scss
@@ -1,8 +1,8 @@
 //main: ../master.scss
 
-*{
-	box-sizing: border-box;
-	outline: 0;
+* {
+  box-sizing: border-box;
+  outline: 0;
 }
 
 ::-moz-selection {
@@ -15,210 +15,236 @@
   background: $color-primary;
 }
 
-body{
-	color: $color-black;
-	font-family: $font-open;
-	font-size: 16px;
-	line-height: 1.4;
+body {
+  color: $color-black;
+  font-family: $font-open;
+  font-size: 16px;
+  line-height: 1.4;
 }
 
-.app{
-	position: relative;
-	display: flex;
-	width: 100vw;
-	height: 100vh;
-	overflow: hidden;
-	&.side-is-open{
-		.button-menu{
-			i{
-				&:before{
-					content: 'first_page';
-				}
-			}
-		}
-		.container-side{
-			transform: translateX(0);
-		}
-		.container-page{
-			width: calc(100% - #{$width-side});
-			transform: translateX($width-side);
-		}
-	}
+.app {
+  position: relative;
+  display: flex;
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
+  &.side-is-open {
+    .button-menu {
+      i {
+        &:before {
+          content: "first_page";
+        }
+      }
+    }
+    .container-side {
+      transform: translateX(0);
+    }
+    .container-page {
+      width: calc(100% - #{$width-side});
+      transform: translateX($width-side);
+    }
+  }
 }
 
-.container-navigation{
-	position: relative;
-	z-index: 99;
-	width: $width-menu;
-	color: $color-chalice;
-	background-color: $color-white;
-	display: flex;
-	flex-direction: column;
-	border-right: 1px solid $color-border;
-	.button-menu{
-		outline: none;
-		cursor: pointer;
-		font-size: 1.5rem;
-		color: $color-dove;
-		i{
-			&:before{
-				content: 'last_page';
-			}
-		}
-		&:hover{
-			color: $color-shaft;
-		}
-	}
+.container-navigation {
+  position: relative;
+  z-index: 99;
+  width: $width-menu;
+  color: $color-chalice;
+  background-color: $color-white;
+  display: flex;
+  flex-direction: column;
+  border-right: 1px solid $color-border;
+  .button-menu {
+    outline: none;
+    cursor: pointer;
+    font-size: 1.5rem;
+    color: $color-dove;
+    i {
+      &:before {
+        content: "last_page";
+      }
+    }
+    &:hover {
+      color: $color-shaft;
+    }
+  }
 }
 
-.container-main{
-	display: flex;
-	width: calc(100vw - #{$width-menu});
-	height: 100vh;
-	.container-side{
-		position: absolute;
-		left: $width-menu;
-		top: 0;
-		transform: translateX(-#{$width-side});
-		width: $width-side;
-		height: 100vh;
-		flex-grow: 0;
-		flex-shrink: 0;
-		padding: 2rem;
-		background-color: $color-gallery;
-		border-right: 1px solid $color-border;
-		transition: transform 350ms;
-		h4{
-			font-size: 1.25rem;
-		}
-		.menu{
-			padding: 0;
-			margin: 0;
-			list-style: none;
-			margin-bottom: 3rem;
-			li{
-				margin-bottom: .125rem;
-				a{
-					color: $color-dove;
-					&:hover{
-						color: $color-shaft;
-					}
-				}
-			}
-		}
-	}
-	.container-page{
-		position: relative;
-		width: 100%;
-		transform: translateX(0);
-		transition: transform 350ms, width 350ms;
-		overflow-y: auto;
-		.container-page-head{
-			position: sticky;
-			top: 0;
-			z-index: 99;
-			display: flex;
-			align-items: center;
-			width: 100%;
-			height: 48px;
-			border-bottom: 1px solid $color-border;
-			background-color: $color-white;
-			padding: .5rem 2rem;
-			.page-title{
-				margin-bottom: 0;
-				margin-right: 2rem;
-				font-size: 1rem;
-				color: $color-dove;
-			}
-			.container-search {
-				position: relative;
-				width: 100%;
-				i {
-					position: absolute;
-					top: 50%;
-					left: .5rem;
-					transform: translateY(-50%);
-					color: $color-dove;
-				}
-				input{
-					width: 100%;
-					border: 1px solid $color-border;
-					border-radius: 3px;
-					line-height: 1.25;
-					padding: .5rem .725rem .5rem 2rem;
-					&:hover{
-						border-color: $color-shaft;
-					}
-					&:focus{
-						border-color: $color-primary-active;
-					}
-				}
-			}
-		}
-		.container-page-content{
-			padding: 2rem;
-		}
-	}
+.container-main {
+  display: flex;
+  width: calc(100vw - #{$width-menu});
+  height: 100vh;
+  .container-side {
+    position: absolute;
+    left: $width-menu;
+    top: 0;
+    transform: translateX(-#{$width-side});
+    width: $width-side;
+    height: 100vh;
+    flex-grow: 0;
+    flex-shrink: 0;
+    padding: 2rem;
+    background-color: $color-gallery;
+    border-right: 1px solid $color-border;
+    transition: transform 350ms;
+    h4 {
+      font-size: 1.25rem;
+    }
+    .menu {
+      padding: 0;
+      margin: 0;
+      list-style: none;
+      margin-bottom: 3rem;
+      li {
+        margin-bottom: 0.125rem;
+        a {
+          color: $color-dove;
+          &:hover {
+            color: $color-shaft;
+          }
+        }
+      }
+    }
+  }
+  .container-page {
+    position: relative;
+    width: 100%;
+    transform: translateX(0);
+    transition: transform 350ms, width 350ms;
+    overflow-y: auto;
+    .container-page-head {
+      position: sticky;
+      top: 0;
+      z-index: 99;
+      display: flex;
+      align-items: center;
+      width: 100%;
+      height: 48px;
+      border-bottom: 1px solid $color-border;
+      background-color: $color-white;
+      padding: 0.5rem 2rem;
+      .page-title {
+        margin-bottom: 0;
+        margin-right: 2rem;
+        font-size: 1rem;
+        color: $color-dove;
+      }
+      .container-search {
+        position: relative;
+        width: 100%;
+        i {
+          position: absolute;
+          top: 50%;
+          left: 0.5rem;
+          transform: translateY(-50%);
+          color: $color-dove;
+        }
+        input {
+          width: 100%;
+          border: 1px solid $color-border;
+          border-radius: 3px;
+          line-height: 1.25;
+          padding: 0.5rem 0.725rem 0.5rem 2.25rem;
+          &:hover {
+            border-color: $color-shaft;
+          }
+          &:focus {
+            border-color: $color-primary-active;
+          }
+        }
+      }
+    }
+    .container-page-content {
+      padding: 2rem;
+      height: calc(100% - 48px);
+    }
+  }
 }
 
-.container-menu{
-	width: $width-nav;
-	.menu{
-		list-style: none;
-		padding: 0;
-		margin: 0;
-		text-align: center;
-		li{
-			width: 32px;
-			height: 32px;
-			margin-bottom: 1rem;
-			a{
-				border-radius: 3px;
-				display: flex;
-				align-items: center;
-				justify-content: center;
-				width: 100%;
-				height: 100%;
-				color: $color-dove;
-				// &:hover{
-				// 	background-color: $color-link;
-				// 	color: $color-white;
-				// 	i{
-				// 		&:after{
-				// 			color: $color-white;
-				// 		}
-				// 	}
-				// }
-				i{
-					font-size: 1.5rem;
-					color: $color-dove;
-				}
-			}
-			&:hover{
-				a{
-					background-color: $color-gallery;
-					color: $color-shaft;
-					i{
-						color: $color-shaft;
-					}
-				}
-			}
-			&.current-item{
-				a{
-					background-color: $color-gallery;
-					color: $color-shaft;
-					i{
-						color: $color-shaft;
-					}
-				}
-			}
-		}
-	}
+.container-menu {
+  width: $width-nav;
+  .menu {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    text-align: center;
+    li {
+      width: 32px;
+      height: 32px;
+      margin-bottom: 1rem;
+      a {
+        border-radius: 3px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        height: 100%;
+        color: $color-dove;
+        // &:hover{
+        // 	background-color: $color-link;
+        // 	color: $color-white;
+        // 	i{
+        // 		&:after{
+        // 			color: $color-white;
+        // 		}
+        // 	}
+        // }
+        i {
+          font-size: 1.5rem;
+          color: $color-dove;
+        }
+      }
+      &:hover {
+        a {
+          background-color: $color-gallery;
+          color: $color-shaft;
+          i {
+            color: $color-shaft;
+          }
+        }
+      }
+      &.current-item {
+        a {
+          background-color: $color-gallery;
+          color: $color-shaft;
+          i {
+            color: $color-shaft;
+          }
+        }
+      }
+    }
+  }
 }
 
-.container-account{
-	margin-top: auto;
-	.user-avatar{
-		width: 32px;
-	}
+.container-account {
+  margin-top: auto;
+  .user-avatar {
+    width: 32px;
+  }
+}
+
+.container-errors {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  .error-content {
+    padding: 1.5rem;
+    display: flex;
+    flex-flow: column;
+    margin: auto;
+    align-items: center;
+    text-align: center;
+    h2 {
+      color: $color-alto;
+      font-size: 6rem;
+      font-weight: 700;
+      margin-bottom: 0;
+    }
+    h3 {
+      font-size: 2rem;
+      font-weight: 500;
+      margin-bottom: 0.725rem;
+    }
+  }
 }
