--- a/assets/stylesheets/scss/base/typography.scss
+++ b/assets/stylesheets/scss/base/typography.scss
@@ -1,18 +1,34 @@
 //main: ../master.scss
 
-a{
-	text-decoration: none;
+a {
+  text-decoration: none;
 }
 
-p{
-	margin: 0;
-	&:not(:last-child){
-		margin-bottom: 1.375rem;
-	}
+p {
+  margin: 0;
+  &:not(:last-child) {
+    margin-bottom: 1.375rem;
+  }
 }
 
-h1,h2,h3,h4,h5,h6{
-	color: $color-shaft;
-	margin: 0;
-	margin-bottom: 1rem;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  color: $color-shaft;
+  margin: 0;
+  margin-bottom: 1rem;
+}
+
+.start {
+  margin-right: 0.5rem;
+}
+.end {
+  margin-left: 0.5rem;
+}
+
+.material-icons {
+  vertical-align: -7px;
 }
