--- a/assets/stylesheets/scss/modules/base.scss
+++ b/assets/stylesheets/scss/modules/base.scss
@@ -1,128 +1,145 @@
 //main: ../master.scss
 
-.modules-col{
-	display: flex;
-	flex-direction: column;
-	flex: 1 1 auto;
+.row {
+  display: flex;
+  flex-wrap: wrap;
+  margin-left: -0.725rem;
+  margin-right: -0.725rem;
+  .col-1,
+  .col-2,
+  .col-3,
+  .col-4 {
+    margin-left: 0.725rem;
+    margin-right: 0.725rem;
+  }
+  &:not(:last-child) {
+    .col-1,
+    .col-2,
+    .col-3,
+    .col-4 {
+      margin-bottom: 1.5rem;
+    }
+  }
 }
 
-.modules-row{
-	width: calc(100% + 1.5rem);
-	display: flex;
-
-	flex: 1 1 auto;
-	flex-direction: row;
-	flex-wrap: nowrap;
-	align-items: flex-start;
-
-	margin-left: -.725rem;
-	margin-right: -.725rem;
-
-	.modules-col{
-		.module-container{
-			&:not(:last-child){
-				margin-bottom: 1.5rem;
-			}
-		}
-	}
-	&.m1{
-		.module-container{
-			flex-basis: calc(100% - 1.5rem);
-			max-width: calc(100% - 1.5rem);
-		}
-	}
-	&.m2{
-		.module-container{
-			flex-basis: calc((100% / 2) - 1.5rem);
-			max-width: calc((100% / 2) - 1.5rem);
-		}
-	}
-	&.m3{
-		.module-container{
-			flex-basis: calc((100% / 3) - 1.5rem);
-			max-width: calc((100% / 3) - 1.5rem);
-		}
-	}
-	&.m4{
-		.module-container{
-			flex-basis: calc((100% / 4) - 1.5rem);
-			max-width: calc((100% / 4) - 1.5rem);
-		}
-	}
-
-	&:not(:last-child){
-		margin-bottom: 1.5rem;
-	}
-	.module-container{
-		margin-bottom: 0;
-		margin-left: .725rem;
-		margin-right: .725rem;
-	}
+.module-container {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  min-height: 1px;
+  color: $color-dove;
+  background-color: $color-white;
+  border: 1px solid $color-alto;
+  border-radius: 4px;
+  .module-head {
+    height: 49px;
+    display: flex;
+    align-items: center;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+    padding-left: 1.5rem;
+    border-bottom: 1px solid $color-alto;
+    .module-title {
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+      color: #191919;
+      font-size: 1rem;
+      line-height: 1;
+      padding-bottom: 0.25rem;
+      margin-bottom: 0;
+    }
+    .module-actions {
+      margin-left: auto;
+      display: flex;
+      align-items: center;
+      padding-right: 0.5rem;
+      .button {
+        font-size: 12px;
+        height: 32px;
+      }
+      .item {
+        cursor: pointer;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 32px;
+        height: 32px;
+        margin-left: 0.5rem;
+        padding: 0;
+        border-radius: 3px;
+        i {
+          font-size: 1.5rem;
+          color: $color-text;
+        }
+        &:hover {
+          background-color: $color-gallery;
+          i {
+            color: $color-shaft;
+          }
+        }
+      }
+    }
+  }
+  .module-content {
+    padding: 1.5rem;
+    height: calc(100% - 49px);
+    display: flex;
+    flex-direction: column;
+    .h100 {
+      height: 100%;
+    }
+    p {
+      color: $color-text;
+      font-size: 0.875rem;
+      word-wrap: break-word;
+    }
+  }
 }
 
-.module-container{
-	flex: 1 0 auto;
-	display: inline-block;
-	background-color: $color-white;
-	border: 1px solid $color-alto;
-	border-radius: 4px;
-	color: $color-dove;
-	.module-head{
-		height: 49px;
-		display: flex;
-		align-items: center;
-		padding-top: .5rem;
-		padding-bottom: .5rem;
-		padding-left: 1.5rem;
-		border-bottom: 1px solid $color-alto;
-		.module-title{
-			overflow: hidden;
-			text-overflow: ellipsis;
-			white-space: nowrap;
-			color: #191919;
-			font-size: 1rem;
-			line-height: 1;
-			padding-bottom: .25rem;
-			margin-bottom: 0;
-		}
-		.module-actions{
-			margin-left: auto;
-			display: flex;
-			align-items: center;
-			padding-right: .5rem;
-			.button{
-				font-size: 12px;
-				height: 32px;
-			}
-			.item{
-				cursor: pointer;
-				display: flex;
-				align-items: center;
-				justify-content: center;
-				width: 32px;
-				height: 32px;
-				margin-left: .5rem;
-				padding: 0;
-				border-radius: 3px;
-				i{
-					font-size: 1.5rem;
-					color: $color-text;
-				}
-				&:hover{
-					background-color: $color-gallery;
-					i{
-						color: $color-shaft;
-					}
-				}
-			}
-		}
-	}
-	.module-content{
-		padding: 1.5rem;
-		p{
-			color: $color-text;
-			font-size: .875rem;
-			word-wrap: break-word;
-		}
-	}
+@media (min-width: 576px) {
+  .row {
+    .col-1,
+    .col-2,
+    .col-3,
+    .col-4 {
+      flex: 0 0 calc(100% - 1.5rem);
+      max-width: calc(100% - 1.5rem);
+    }
+  }
+}
+@media (min-width: 768px) {
+  .row {
+    .col-1,
+    .col-2,
+    .col-3 {
+      flex: 0 0 calc(50% - 1.5rem);
+      max-width: calc(50% - 1.5rem);
+    }
+
+    .col-4 {
+      flex: 0 0 calc(100% - 1.5rem);
+      max-width: calc(100% - 1.5rem);
+    }
+  }
+}
+@media (min-width: 992px) {
+  .row {
+    .col-1 {
+      flex: 0 0 calc(25% - 1.5rem);
+      max-width: calc(25% - 1.5rem);
+    }
+    .col-2 {
+      flex: 0 0 calc(50% - 1.5rem);
+      max-width: calc(50% - 1.5rem);
+    }
+    .col-3 {
+      flex: 0 0 calc(75% - 1.5rem);
+      max-width: calc(75% - 1.5rem);
+    }
+    .col-4 {
+      flex: 0 0 calc(100% - 1.5rem);
+      max-width: calc(100% - 1.5rem);
+    }
+  }
 }
