--- a/assets/stylesheets/scss/modules/calendar.scss
+++ b/assets/stylesheets/scss/modules/calendar.scss
@@ -1,37 +1,55 @@
 //main: ../master.scss
 
-.wrap-calendar{
-	.calendar{
-		border-collapse: collapse;
-		border-spacing: 0;
-		.day{
-			vertical-align: middle;
-			text-align: center;
-			width: 40px;
-			height: 40px;
-		}
-		.head{
-			.day{
-				font-size: 12px;
-			}
-		}
-		.week{
-			.day{
-				color: $color-shaft;
-				font-size: 14px;
-				box-shadow: inset 0px 0px 0px 1px $color-alto;
-				&:hover{
-					box-shadow: inset 0px 0px 0px 1px $color-dove;
-				}
-				&.today{
-					box-shadow: inset 0px 0px 0px 1px $color-primary;
-					background-color: $color-primary;
-					color: $color-white;
-				}
-				&.weekend{
-					color: $color-chalice;
-				}
-			}
-		}
-	}
+.wrap-calendar {
+  height: 100%;
+  .calendar {
+    width: 100%;
+    height: 100%;
+    border-collapse: collapse;
+    border-spacing: 0;
+    .day {
+      position: relative;
+      width: 40px;
+      height: 40px;
+      .content {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+      }
+    }
+    .head {
+      .day {
+        font-size: 12px;
+      }
+    }
+    .week {
+      .day {
+        color: $color-shaft;
+        font-size: 14px;
+        box-shadow: inset 0px 0px 0px 1px $color-alto;
+        &:after {
+          content: "";
+          display: block;
+          width: 100%;
+          padding-bottom: 100%;
+        }
+        &:hover {
+          box-shadow: inset 0px 0px 0px 1px $color-dove;
+        }
+        &.today {
+          box-shadow: inset 0px 0px 0px 1px $color-primary;
+          background-color: $color-primary;
+          color: $color-white;
+        }
+        &:not(.today).weekend {
+          color: $color-chalice;
+        }
+      }
+    }
+  }
 }
